apps/prd/domotique/frigate/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: frigate-auth
spec:
  basicAuth:
    secret: frigate-auth
