apps/prd/domotique/frigate/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
spec:
  selector:
    matchLabels:
      app: frigate
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeName: k8s-01
      containers:
      - image: ghcr.io/blakeblackshear/frigate:0.16.4
        name: frigate
        ports:
        - containerPort: 5000
          protocol: TCP
          name: http
        volumeMounts:
        - mountPath: "/media/frigate"
          name: frigate
        - name: frigateconfig
          mountPath: "/config/"
        - name: config
          mountPath: "/config/config.yml"
          subPath: "config.yml"
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /tmp/cache
          name: cache
        securityContext:
          privileged: true
      volumes:
      - name: frigate
        persistentVolumeClaim:
          claimName: frigate
      - name: frigateconfig
        persistentVolumeClaim:
          claimName: frigateconfig
      - name: config
        configMap:
          name: frigate
      - name: dshm
        emptyDir:
          medium: Memory
      - name: cache
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt
spec:
  selector:
    matchLabels:
      app: mqtt
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mqtt
    spec:
      containers:
      - image: eclipse-mosquitto:1.6
        name: mqtt
        ports:
        - containerPort: 1883
          protocol: TCP
